public/studentsubmission/Logs/demo1/[1][18604241717][demo1][h][A].c.log
Compile Error
[1][18604241717][demo1][h][A].c:1:1: error: stray '\304' in program
 đâsdasdasdasd
 ^
[1][18604241717][demo1][h][A].c:1:2: error: stray '\221' in program
 đâsdasdasdasd
  ^
[1][18604241717][demo1][h][A].c:1:3: error: stray '\303' in program
 đâsdasdasdasd
   ^
[1][18604241717][demo1][h][A].c:1:4: error: stray '\242' in program
 đâsdasdasdasd
    ^
[1][18604241717][demo1][h][A].c:1:1: error: expected '=', ',', ';', 'asm' or '__attribute__' at end of input
 đâsdasdasdasd
 ^
